talk: minor stuff

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -114,7 +114,7 @@
 }
 
 @incollection{itip-statinf,
-    author    = "Thomas Augustin and Frank P.A. Coolen and Erik Quaeghebeur and Gero Walter",
+    author    = "Thomas Augustin and Gero Walter and Frank P.A. Coolen",
     title     = "Statistical Inference",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
