--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -2,12 +2,15 @@
 
 \begin{itemize}
 \item Short introduction to IP (sets of priors, lower/upper prevision/probability)
-\item motivate imprecise priors with ress paper: \cite{Troffaes2013a} --- now in intro 
+%\item motivate imprecise priors with ress paper: \cite{Troffaes2013a} --- now in intro
+\item \pdc\ (Evans \& Moshonov), examples (\textbf{Festschrift paper}, \cite{Walter2010a})
+\item further motivations for IP (ITIP chapter \cite{itip-statinf}) 
 \item Generalized Bayesian inference
 \item Generalized Bayesian inference with sets of priors
  \begin{itemize}
  \item sets of priors, GBR, robust Bayes
  \item sets of conjugate priors in general
+ \item parameter set shapes
  \end{itemize}
 \item IDM
 \item IJAR paper \cite{Walter2009a}
@@ -16,5 +19,5 @@
 \end{itemize}
 
 
-for later in IDM/IBBM discussion:\\
-we use Walley's \cite[\S 7.7.3, p.~395]{1991:walley} $(s,\vec{t})$ notation for the hyperparameters.
+%for later in IDM/IBBM discussion:\\
+%we use Walley's \cite[\S 7.7.3, p.~395]{1991:walley} $(s,\vec{t})$ notation for the hyperparameters.
