--- a/intro.tex
+++ b/intro.tex
@@ -3,12 +3,11 @@
 
 \begin{itemize}
 \item overview/outline, which paper used where\ldots
-\item statistical inference ??? (\textbf{StatInf chapter}, \cite{itip-statinf})
+\item statistical inference (\textbf{StatInf chapter}, \cite{itip-statinf})
 \item Bayesian inference, conjugate priors, etc. (\textbf{TechRep Dirichlet}, \cite{Walter2012b})
 \item motivate priors etc.\ with ress paper: \cite{Troffaes2013a}
 \item short part on decision theory, updating rules? --- probably not
-\item \pdc\ (Evans \& Moshonov), examples (\textbf{Festschrift paper}, \cite{Walter2010a}) --- later
-\item other motivations for IP? --- later
+%\item other motivations for IP? --- later
 \end{itemize}
 
 \section{Overview / Outline***}
