--- a/talk/talk.tex
+++ b/talk/talk.tex
@@ -175,8 +175,8 @@
 
 \frame{\frametitle{Outline}
 \begin{enumerate}
-\item Common-cause failure modelling
-\item Generalised Bayesian inference with sets of priors
+\item Common-cause failure modelling (joint work with Matthias Troffaes and Dana Kelly)
+\item Generalised Bayesian inference with sets of priors (joint work with Thomas Augustin)
 \item Prior-Data Conflict
 \end{enumerate}
 }
